src/objects/Opp_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Annualized_Forecast__c</fullName>
        <label>Annualized Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Potential__c</fullName>
        <label>Annualized Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Value__c</fullName>
        <description>(IF(MONTH(End_Date__c) &lt;= MONTH(Start_Date__c), 1, 0))</description>
        <formula>IF(ISPICKVAL( Opportunity__r.ForecastCategoryName, &quot;Omitted&quot;), 0, ( Total_Price__c / ( End_Date__c - Start_Date__c + 1)) * 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inc__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Include on the Opportunity</inlineHelpText>
        <label>Inc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <formula>TEXT(Product__r.Interval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsJDEUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsJDEUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JDE_End_Date__c</fullName>
        <label>JDE End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JDE_Start_Date__c</fullName>
        <label>JDE Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                    <default>true</default>
                    <label>Analyst</label>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Rate__c</fullName>
        <formula>IF( (Product_Family__c = &apos;Consulting&apos; || Product_Family__c = &apos;Other Consulting&apos;) &amp;&amp; NOT(CONTAINS(Product_Name__c, &quot;Travel&quot;)) ,
  Total_Price__c / Quantity__c,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Num_Periods__c</fullName>
        <label># Periods</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Price_Book_Id__c</fullName>
        <formula>Opportunity__r.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Price Book Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Product_Id__c</fullName>
        <label>Opp Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity (Product)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Old Software</relationshipLabel>
        <relationshipName>Opp_Line_Items_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity (Service)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Old Services</relationshipLabel>
        <relationshipName>Opp_Line_Items_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>MSTR_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Product__r.Product_Category__c)</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                    <default>true</default>
                    <label>Analytics</label>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>Product_Name__c + &quot; - &quot; + SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product - SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>MSTR_Opp_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>IF(OR(Interval__c == &apos;Perpetual&apos;,Interval__c == &apos;Project&apos;,Interval__c == &apos;Fixed&apos;,Interval__c == &apos;One-Time&apos;,Interval__c == &apos;Package&apos;,Interval__c == &apos;Negotiated&apos;,Interval__c == &apos;Fee&apos;) , ROUND(Sales_Price__c * Quantity__c, 2),ROUND(Sales_Price__c * Quantity__c * Num_Periods__c, 2))

/*IF(OR(Interval__c == &apos;Perpetual&apos;,Interval__c == &apos;Hourly&apos;,Interval__c == &apos;Fixed&apos;,Interval__c == &apos;One-Time&apos;,Interval__c == &apos;Package&apos;,Interval__c == &apos;Hourly (Prepaid)&apos;,Interval__c == &apos;Fee&apos;) , ROUND(Sales_Price__c * Quantity__c, 2),ROUND(Sales_Price__c * Quantity__c * Num_Periods__c, 2)) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <formula>IF( 
TEXT(Product__r.Interval__c) = &apos;Perpetual&apos;, 
&quot;Perpetual&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;Negotiated&apos;, 
&quot;Negotiated&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;One-Time&apos;, 
&quot;One-Time&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;Project&apos;, 
&quot;Project&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;Fixed&apos;, 
&quot;Fixed&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;Fee&apos;, 
&quot;Fee&quot;, 

IF( 
TEXT(Product__r.Interval__c) = &apos;Package&apos;, 
&quot;Package&quot;, 

IF( 
AND(TEXT(Product__r.Interval__c) = &apos;Annual&apos;, ISNULL(Start_Date__c), ISNULL(End_Date__c)), 
&quot;Annual (Missing Start and End Dates)&quot;, 


IF( 
AND(TEXT(Product__r.Interval__c) = &apos;Term&apos;, ISNULL(Start_Date__c), ISNULL(End_Date__c)), 
&quot;Term(Missing Start and End Dates)&quot;, 

IF( 
AND(TEXT(Product__r.Interval__c) = &apos;Subscription&apos;, ISNULL(Start_Date__c), ISNULL(End_Date__c)), 
&quot;Subscription(Missing Start and End Dates)&quot;, 

IF( 
AND( TEXT(Product__r.Interval__c) = &apos;Annual&apos;, NOT(ISNULL(Start_Date__c)), NOT(ISNULL(End_Date__c))), 
&quot;Annual (&quot; &amp; ( CASE( MONTH( Start_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Start_Date__c))) &amp; &quot; - &quot; &amp; ( CASE( MONTH( End_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(End_Date__c)))&amp; &quot;)&quot;, 

IF( 
AND( TEXT(Product__r.Interval__c) = &apos;Subscription&apos;, NOT(ISNULL(Start_Date__c)), NOT(ISNULL(End_Date__c))), 
&quot;Subscription (&quot; &amp; ( CASE( MONTH( Start_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Start_Date__c))) &amp; &quot; - &quot; &amp; ( CASE( MONTH( End_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(End_Date__c)))&amp; &quot;)&quot;, 

IF( 
AND( TEXT(Product__r.Interval__c) = &apos;Term&apos;, NOT(ISNULL(Start_Date__c)), NOT(ISNULL(End_Date__c))), 
&quot;Term (&quot; &amp; ( CASE( MONTH( Start_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(Start_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Start_Date__c))) &amp; &quot; - &quot; &amp; ( CASE( MONTH( End_Date__c) , 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;None&quot;) &amp; &quot;/&quot; &amp; TEXT(DAY(End_Date__c)) &amp; &quot;/&quot; &amp; TEXT(YEAR(End_Date__c)))&amp; &quot;)&quot;,&quot;&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Subtotal__c - ROUND(Subtotal__c * Discount__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Opp Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Line Items</pluralLabel>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>